# vara-amm

./: Cargo.toml  README.md
.github/workflows/: contract.yml  frontend-k8s.yml  k8s-indexer-deploy.yml
contracts/: .gitignore  Cargo.toml  rust-toolchain.toml
contracts/factory/: .binpath  Cargo.toml  README.md  build.rs
contracts/factory/app/: Cargo.toml
contracts/factory/app/src/: lib.rs
contracts/factory/client/: Cargo.toml  build.rs  factory_client.idl
contracts/factory/client/src/: factory_client.rs  lib.rs
contracts/factory/src/: lib.rs
contracts/factory/tests/: gtest.rs
contracts/pair/: .binpath  Cargo.toml  README.md  build.rs
contracts/pair/app/: Cargo.toml
contracts/pair/app/src/: lib.rs
contracts/pair/app/src/services/: mod.rs
contracts/pair/app/src/services/lp_token/: mod.rs  state.rs
contracts/pair/app/src/services/pair/: amm_math.rs  funcs.rs  lock.rs  mod.rs  msg_tracker.rs  token_operations.rs
contracts/pair/client/: Cargo.toml  build.rs  pair_client.idl
contracts/pair/client/src/: lib.rs  pair_client.rs
contracts/pair/src/: lib.rs
contracts/pair/tests/: gtest.rs  mod.rs
contracts/pair/tests/liquidity/: add_liquidity.rs  first_liquidity.rs  migration.rs  mod.rs  remove_liquidity.rs
contracts/pair/tests/pause/: mod.rs
contracts/pair/tests/recovery/: liquidity.rs  migration.rs  mod.rs  swap.rs  treasury.rs
contracts/pair/tests/swaps/: exact_input.rs  exact_input_treasury.rs  exact_output.rs  exact_output_treasury.rs  full_workflow.rs  mod.rs  treasury.rs
contracts/pair/tests/utils/: mod.rs  setup_helpers.rs  swap_calculator.rs  test_env.rs
factory/: Cargo.toml
factory/tests/: gtest.rs
frontend/: .env.example  .gitignore  Dockerfile  README.md  consts.ts  eslint.config.js  eslint.config.mjs  index.html  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/explore/: page.tsx
frontend/app/hocs/: index.tsx
frontend/app/pool/: page.tsx
frontend/app/trade/: page.tsx
frontend/components/: explore-page.tsx  navigation.tsx  pool-page.tsx  theme-provider.tsx  theme-switcher.tsx  token-selector.tsx  trade-page-buy.tsx  trade-page-sell.tsx  trade-page.tsx
frontend/components/ui/: accordion.tsx  alert.tsx  button.tsx  calendar.tsx  carousel.tsx  chart.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input-otp.tsx  loader.tsx  menubar.tsx  navigation-menu.tsx  progress.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  sidebar.tsx  slider.tsx  switch.tsx  toast.tsx  toggle-group.tsx
frontend/features/pair/: index.ts  types.ts  utils.ts
frontend/features/pair/components/: add-liquidity.tsx  index.ts  remove-liquidity-dialog.tsx  remove-liquidity.tsx
frontend/features/pair/hooks/: index.ts  usePairsBalances.ts  usePairsTokens.ts
frontend/features/wallet/: consts.ts
frontend/features/wallet/assets/: index.ts
frontend/lib/: utils.ts
frontend/lib/sails/: extended-vft.ts  factory.ts  index.ts  pair.idl  pair.ts  sails.tsx  types.ts
frontend/src/: app.tsx  consts.ts  main.tsx  types.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/hocs/: index.tsx  query-provider.tsx
frontend/src/assets/images/: index.ts
frontend/src/components/: add-liquidity-dialog.tsx  address.tsx  explore-page.tsx  index.ts  navigation.tsx  pool-page.tsx  theme-provider.tsx  theme-switcher.tsx  token-custom-icon.tsx  token-icon.tsx  token-selector.tsx  trade-page-buy.tsx  trade-page-sell.tsx  trade-page.tsx  wallet.tsx
frontend/src/components/explore-page/: index.tsx  pools-filters.tsx  pools.tsx  tokens-filters.tsx  tokens.tsx  transactions.tsx
frontend/src/components/trade-page/: buy.tsx  index.tsx  sell.tsx
frontend/src/components/ui/: accordion.tsx  alert.module.scss  alert.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  carousel.tsx  chart.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  index.ts  input-otp.tsx  input.tsx  loader.tsx  menubar.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sidebar.tsx  slider.tsx  toggle-group.tsx  tooltip.tsx
frontend/src/features/pair/: index.ts  queries.ts  schema.ts  types.ts  utils.ts
frontend/src/features/sim/: index.ts  (+3 more)
frontend/src/hooks/: index.ts  use-sim-ws.ts  useGraphQLQuery.ts
frontend/src/lib/: graphql-client.ts  utils.ts
frontend/src/pages/: explore.tsx  home.tsx  index.tsx  pool.tsx  trade.tsx
frontend/src/styles/: globals.css
frontend/src/utils/: address.ts  currency.ts  index.ts
indexer/: .env  Dockerfile  README.md  package-lock.json  package.json  schema.graphql
indexer/assets/: factory.idl  pair.idl
indexer/db/migrations/: 1754490405703-$NAME.js  1754647538930-$NAME.js  1755680229685-$NAME.js  1755700395015-$NAME.js  1756111928352-CreateTokenTables.js  1756112600000-AddTokenPricingFixed.js  1756200000000-AddVolumeOptimizations.js  1756300000000-RemoveTokenPricingFields.js  1756400000000-RemoveTokenSnapshotVolumeFields.js  1756500000000-InitMigration.js  1756731020323-InitMigration.js  1763733604443-AddIsActiveToPair.js
indexer/lib/: api.js  config.js  main.js  processor.js  sails-decoder.js
indexer/lib/handlers/: base.js  index.js  stub.js
indexer/lib/helpers/: block.js  index.js  is.js
indexer/lib/model/: dataSource.js
indexer/lib/types/: index.js
indexer/src/: api.ts  config.ts  main.ts  processor.ts  sails-decoder.ts
indexer/src/handlers/: base.ts  factory.ts  index.ts  pair.ts  stub.ts
indexer/src/helpers/: block.ts  index.ts  is.ts
indexer/src/model/: dataSource.ts
indexer/src/services/: extended-vft-program.ts  factory-manager.ts  index.ts  pair-program.ts  price-calculator.ts  token-manager.ts  vft-cache.ts  volume-calculator.ts
indexer/src/types/: gear-events.ts  index.ts  pair.ts  volume.ts
pair/app/: Cargo.toml
pair/app/src/: lib.rs
pair/app/src/services/lp_token/: mod.rs
pair/app/src/services/pair/: token_operations.rs
pair/client/: Cargo.toml
pair/tests/: utils.rs
(+180 files in other folders)
