[workspace]
resolver = "2"

members = [
    "factory",
    "factory/client",
    "pair",
    "pair/client",
]

[workspace.package]
authors = ["Gear Foundation <hello@gear.foundation>"]
version = "1.1.0"
license = "MIT"
edition = "2021"
publish = false

[workspace.dependencies]
gstd = "=1.8.1"
sails-rs = "=0.8.1"
sails-idl-gen = "=0.8.1"
sails-client-gen = "=0.8.1"
log = "*"
env_logger = "*"
tokio = { version = "1.41", features = ["rt", "macros"] }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }

hex = "0.4.3"
hex-literal = "0.4.1"
serde_json = "1.0.140"
num-bigint = "0.4.6"
num-traits = "0.2.19"

