[workspace]
resolver = "2"

members = [
    "factory",
    "factory/client",
    "pair",
    "pair/client",
]

[workspace.package]
authors = ["Gear Foundation <hello@gear.foundation>"]
version = "1.1.0"
license = "MIT"
edition = "2021"
publish = false

[workspace.dependencies]
gstd = "=1.10.0"
gtest = "=1.10.0"
sails-rs = "=0.10.2"
sails-client-gen = "=0.10.2"
sails-idl-gen = "=0.10.2"
awesome-sails-utils = { git = "https://github.com/gear-tech/awesome-sails", version = "0.2.0" }
awesome-sails-vft = { git = "https://github.com/gear-tech/awesome-sails", version = "0.2.0" }
awesome-sails-vft-utils = { git = "https://github.com/gear-tech/awesome-sails", version = "0.2.0" }
awesome-sails-vft-metadata = { git = "https://github.com/gear-tech/awesome-sails", version = "0.2.0" }
awesome-sails-storage = { git = "https://github.com/gear-tech/awesome-sails", version = "0.2.0" }

log = "*"
env_logger = "*"
tokio = { version = "1.41", features = ["rt", "macros"] }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }

hex = "0.4.3"
hex-literal = "0.4.1"
serde_json = "1.0.140"
num-bigint = "0.4.6"
num-traits = "0.2.19"

