[package]
name = "factory"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
factory-app = { path = "app" }

[build-dependencies]
factory-app = { path = "app" }
sails-rs = { workspace = true, features = ["wasm-builder"] }
sails-idl-gen.workspace = true

[dev-dependencies]
factory = { path = ".", features = ["wasm-binary"] }
factory-client = { path = "client" }
sails-rs = { workspace = true, features = ["gtest"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[features]
wasm-binary = []
