[package]
name = "pair"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
pair-app = { path = "app" }
extended-vft = { git = "https://github.com/gear-foundation/standards/", rev = "004dfba2ff3ac1ef12cb16b7f6f20a57605a5f28" }

[build-dependencies]
pair-app = { path = "app" }
sails-rs = { workspace = true, features = ["build"] }

[dev-dependencies]
pair = { path = ".", features = ["wasm-binary"] }
pair-client = { path = "client" }
sails-rs = { workspace = true, features = ["gtest"] }
tokio = { workspace = true, features = ["rt", "macros"] }
extended-vft-client = { git = "https://github.com/gear-foundation/standards/", rev = "004dfba2ff3ac1ef12cb16b7f6f20a57605a5f28" }
extended-vft = { git = "https://github.com/gear-foundation/standards/", rev = "004dfba2ff3ac1ef12cb16b7f6f20a57605a5f28" }
rand = "0.9.2"

[features]
wasm-binary = []
