[package]
name = "pair"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
pair-app = { path = "app" }

[build-dependencies]
pair-app = { path = "app" }
sails-rs = { workspace = true, features = ["build"] }

[dev-dependencies]
pair = { path = ".", features = ["wasm-binary"] }
pair-client = { path = "client" }
sails-rs = { workspace = true, features = ["gtest"] }
gtest.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
rand = "0.9.2"
extended-vft-client = { git = "https://github.com/gear-foundation/standards/", rev = "ac8dfdc41ba557669d98651267ab5cf53b46c0ee"}

[features]
wasm-binary = []
