[package]
name = "pair-app"
version = "0.1.0"
edition = "2024"

[dependencies]
sails-rs = { workspace = true, features = ["debug"] }
extended-vft-client = { git = "https://github.com/gear-foundation/standards/"}
vft-service = { git = "https://github.com/gear-foundation/standards/"}
parity-scale-codec.workspace = true
scale-info.workspace = true
gstd.workspace = true
