[package]
name = "pair-app"
version = "0.1.0"
edition = "2024"

[dependencies]
sails-rs = { workspace = true, features = ["debug"] }
extended-vft-client = { git = "https://github.com/gear-foundation/standards/", rev = "004dfba2ff3ac1ef12cb16b7f6f20a57605a5f28"}
vft-service = { git = "https://github.com/gear-foundation/standards/", rev = "004dfba2ff3ac1ef12cb16b7f6f20a57605a5f28"}
parity-scale-codec.workspace = true
scale-info.workspace = true
gstd.workspace = true
