[package]
name = "pair-app"
version = "0.1.0"
edition = "2024"

[dependencies]
sails-rs = { workspace = true, features = ["debug"] }
extended-vft-client = { git = "https://github.com/gear-foundation/standards/", rev = "ac8dfdc41ba557669d98651267ab5cf53b46c0ee"}
vft-service = { git = "https://github.com/gear-foundation/standards/", rev = "ac8dfdc41ba557669d98651267ab5cf53b46c0ee"}
parity-scale-codec.workspace = true
scale-info.workspace = true
gstd.workspace = true
