[package]
name = "pair-app"
version = "0.1.0"
edition = "2024"

[dependencies]
sails-rs = { workspace = true, features = ["debug"] }
awesome-sails-vft-utils.workspace = true
awesome-sails-vft-metadata.workspace = true
awesome-sails-utils.workspace = true
awesome-sails-storage.workspace = true
awesome-sails-vft.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
gstd.workspace = true
extended-vft-client = { git = "https://github.com/gear-foundation/standards/", rev = "ac8dfdc41ba557669d98651267ab5cf53b46c0ee"}

[dev-dependencies]
proptest = "1"